--- a/back-end/package.json
+++ b/back-end/package.json
@@ -21,6 +21,8 @@
     "express-validator": "^6.12.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.9",
+    "multer": "^1.4.3",
+    "shortid": "^2.2.16",
     "slugify": "^1.6.1"
   },
   "devDependencies": {
